hamburger: fix alignment

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -52,6 +52,7 @@ html, body {
     display: none;
     gap: 12px;
     justify-content: center;
+    align-items: center;
     
     .icon {
       padding: 0;
